change controller to rest, fix typos, add dto validation